fix: switch on mobile navigation

--- a/frontend/src/components/SharedLayout/MobileNavigation/MobileNavigation.module.css
+++ b/frontend/src/components/SharedLayout/MobileNavigation/MobileNavigation.module.css
@@ -72,6 +72,7 @@
 .switch {
   grid-area: theme;
   align-self: flex-end;
+  display: flex;
 }
 
 .mobile-open {
